# llm-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ROADMAP.md  TIMELINE.md
lessons/: 01-scaled-dot-product-attention.md  02-multi-head-attention.md  03-ffn-residuals-layernorm.md  04-sinusoidal-positional-encodings.md  05-causal-and-padding-masks.md  06-encoder-decoder-assembly.md  07-training-loop-toy-task.md  08-autoregressive-generation.md  09-decoder-only-architecture.md  10-pre-norm.md  11-learned-positional-embeddings.md  12-byte-pair-encoding.md  13-weight-tying-and-init.md  README.md
papers/: README.md  attention.md  bpe.md  fetch_papers.sh  gpt.md  positional-encodings.md  residuals-layernorm.md  training.md
src/llmlab/: __init__.py
src/llmlab/components/: __init__.py  attention.py  block.py  embeddings.py  ffn.py  masking.py  norms.py  positional.py
src/llmlab/data/: __init__.py  bpe.py  toy.py
src/llmlab/models/: __init__.py  gpt.py  transformer.py
src/llmlab/training/: __init__.py  loop.py  loss.py
tests/: test_attention.py  test_bpe.py  test_ffn_norms_block.py  test_generation.py  test_gpt.py  test_learned_positional.py  test_masking.py  test_multi_head_attention.py  test_positional.py  test_pre_norm.py  test_training.py  test_transformer.py  test_tying_and_init.py
