[project]
name = "llmlab"
version = "0.0.1"
description = "LLM architectures implemented from scratch, one lesson at a time"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
